[gd_scene load_steps=2 format=3 uid="uid://ba0cue6ojxyu8"]

[ext_resource type="Script" path="res://ServerClientSelector.gd" id="1_4j5qa"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClientServerSelectionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4j5qa")

[node name="PanelContainer" type="PanelContainer" parent="ClientServerSelectionPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.7
offset_left = 0.459991
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ClientServerSelectionPanel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Is this a client or server device?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerButton" type="Button" parent="ClientServerSelectionPanel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Server"

[node name="ClientButton" type="Button" parent="ClientServerSelectionPanel/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Client"

[connection signal="button_up" from="ClientServerSelectionPanel/PanelContainer/ServerButton" to="ClientServerSelectionPanel" method="ServerButtonClicked"]
[connection signal="button_up" from="ClientServerSelectionPanel/PanelContainer/ClientButton" to="ClientServerSelectionPanel" method="ClientButtonClicked"]
